# semantic_parsing

./: .gitignore  add_tokens.json  best_metrics.txt  generate_formals_in_PCFG.py  generate_natural_statements.py  main.py  merged_data.jsonl  other_tokens3.json  output.txt  requirements.txt  robert_train.py  selftrain.py  testModel.py  test_model.py  train_RoBERTa.py
gen_utils/: access_llm.py  (+1 more)
generate_dataset/: README.md  depend_analysis_filter.py  main.py  pyproject.toml  test2.py
generate_dataset/ad_hoc_(can_ignore)/: concepts.json  operators.json  random_merge.py
generate_dataset/ad_hoc_(can_ignore)/problems/: _filter.py  filter.py
generate_dataset/assertions_output/: call_vllm.py  random_merge.py
generate_dataset/assertions_output/assertions/: conic10k_output_1.jsonl  conic10k_output_2.jsonl
generate_dataset/build_labels/: __init__.py  random_cfg_deriver.py  translate_format.py
generate_dataset/gen_utils/: access_llm.py  call_vllm.py
generate_dataset/generate_natural_language/: __init__.py  _generate_nl_topv2.py  generate_nl.py
generate_dataset/modeling/: __init__.py  base_classes.py  conic10k.py  modeling_to_cfg.py  topv2.py
generate_dataset/parse_funcs/: __init__.py  _parse_derivation_conic10k.py  _parse_derivation_topv2.py  base_classes.py  parse_derivation.py
generate_dataset/postprocess/: _align_lemma.py  _complete_noun_phrases.py  conic10k_ad_hoc.py  depend_analysis_filter.py  fix_labels.py  stopwords.txt  test2.py  topv2_process_fix_labels.py
generate_dataset/rules/: conic10k.cfg  topv2_weather.cfg
generate_dataset/utils/: access_llm.py
(+119 files in other folders)
